--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
         "dev": "node src/server.js",
         "format:fix": "prettier . --write",
         "format:check": "prettier . --check",
+        "lint:check": "eslint .",
+        "lint:fix": "eslint . --fix",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "devDependencies": {
+        "@eslint/js": "^9.24.0",
         "@types/node": "^22.14.0",
+        "eslint": "^9.24.0",
         "prettier": "3.5.3",
-        "typescript": "^5.8.2"
+        "typescript": "^5.8.2",
+        "typescript-eslint": "^8.29.1"
     }
 }
