--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-    "name": "pizza-delivery-auth-service",
-    "version": "1.0.0",
-    "description": "The User Management Service",
-    "homepage": "https://github.com/SimpleGuruji/prizza-delivery-a-auth-service#readme",
-    "bugs": {
-        "url": "https://github.com/SimpleGuruji/prizza-delivery-a-auth-service/issues"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/SimpleGuruji/prizza-delivery-a-auth-service.git"
-    },
-    "license": "ISC",
-    "author": "Amit Kumar",
-    "type": "commonjs",
-    "main": "index.js",
-    "scripts": {
-        "dev": "node src/server.js",
-        "format:fix": "prettier . --write",
-        "format:check": "prettier . --check",
-        "lint:check": "eslint .",
-        "lint:fix": "eslint . --fix",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.24.0",
-        "@types/node": "^22.14.0",
-        "eslint": "^9.24.0",
-        "prettier": "3.5.3",
-        "typescript": "^5.8.2",
-        "typescript-eslint": "^8.29.1"
-    }
+  "name": "pizza-delivery-auth-service",
+  "version": "1.0.0",
+  "description": "The User Management Service",
+  "homepage": "https://github.com/SimpleGuruji/prizza-delivery-a-auth-service#readme",
+  "bugs": {
+    "url": "https://github.com/SimpleGuruji/prizza-delivery-a-auth-service/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SimpleGuruji/prizza-delivery-a-auth-service.git"
+  },
+  "license": "ISC",
+  "author": "Amit Kumar",
+  "type": "commonjs",
+  "main": "index.js",
+  "scripts": {
+    "dev": "node src/server.js",
+    "format:fix": "prettier . --write",
+    "format:check": "prettier . --check",
+    "lint:check": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.24.0",
+    "@types/node": "^22.14.0",
+    "eslint": "^9.24.0",
+    "husky": "^9.1.7",
+    "prettier": "3.5.3",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.29.1"
+  }
 }
