--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     },
     "dependencies": {
         "dotenv": "^16.4.7",
-        "express": "^5.1.0"
+        "express": "^5.1.0",
+        "winston": "^3.17.0"
     }
 }
