--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "devDependencies": {
         "@eslint/js": "^9.24.0",
         "@types/express": "^5.0.1",
+        "@types/http-errors": "^2.0.4",
         "@types/node": "^22.14.0",
         "eslint": "^9.24.0",
         "husky": "^9.1.7",
@@ -45,6 +46,7 @@
     "dependencies": {
         "dotenv": "^16.4.7",
         "express": "^5.1.0",
+        "http-errors": "^2.0.0",
         "winston": "^3.17.0"
     }
 }
