--- a/package.json
+++ b/package.json
@@ -20,19 +20,24 @@
         "format:check": "prettier . --check",
         "lint:check": "eslint .",
         "lint:fix": "eslint . --fix",
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest --watch --runInBand",
         "prepare": "husky"
     },
     "devDependencies": {
         "@eslint/js": "^9.24.0",
         "@types/express": "^5.0.1",
         "@types/http-errors": "^2.0.4",
+        "@types/jest": "^29.5.14",
         "@types/node": "^22.14.0",
+        "@types/supertest": "^6.0.3",
         "eslint": "^9.24.0",
         "husky": "^9.1.7",
+        "jest": "^29.7.0",
         "lint-staged": "^15.5.0",
         "nodemon": "^3.1.9",
         "prettier": "3.5.3",
+        "supertest": "^7.1.0",
+        "ts-jest": "^29.3.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.2",
         "typescript-eslint": "^8.29.1"
